--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table>
         <tr>
-            <td><img class='profile' src="/cropped.png" alt="profile picture"></td>
+            <td><img class='profile' src="cropped.png" alt="profile picture"></td>
         
             <td><h1 class="center">Aalok Shah</h1>
             <p class="bio">BS in Psychobiology from UCLA</p>
