--- a/index.html
+++ b/index.html
@@ -12,50 +12,55 @@
     <table>
         <tr>
             <td><img class='profile' src="cropped.png" alt="profile picture"></td>
-        
-            <td><h1 class="center">Aalok Shah</h1>
-            <p class="bio">BS in Psychobiology from UCLA</p>
-            <p class="bio">Current student at Code Smith</p></td>
+
+            <td>
+                <h1 class="center">Aalok Shah</h1>
+                <p class="bio">BS in Psychobiology from UCLA</p>
+                <p class="bio">Current student at Code Smith</p>
+            </td>
         </tr>
     </table>
-    
-   <hr>
-    <p class="intro center">I love coding, eating, and snowboarding!</p>
-    <hr>
-    <h3>Current progress</h3>
-    <ul>
-        <table>
-            <tr class="row">
-                <td class="language">JavaScript</td>
-                <td class="star">⭐️⭐️⭐️⭐️</td>
-                <td class="language">CSS</td>
-                <td class="star">⭐️⭐️</td>
-                <td class="language">C++</td>
-                <td class="star">⭐️</td>
-            </tr>
-            <tr class="row">
-                <td class="language">HTML</td>
-                <td class="star">⭐️⭐️⭐️</td>
-                <td class="language">Git</td>
-                <td class="star">⭐️⭐️</td>
-            </tr>
-            <tr class="row">
-                <td class="language">Node</td>
-                <td class="star">⭐️⭐️⭐️</td>
-                <td class="language">Python</td>
-                <td class="star">⭐️⭐️</td>
-            </tr>
-        </table>
 
-        <li>See my Free Code Camp progress <a href='https://www.freecodecamp.org/kolashah'> here</a>!</li>
-    </ul>
-    <h3>To-Do List</h3>
-    <ol>
-        <li>Finish precourse</li>
-        <li>Last few CSX units</li>
-        <li>UDEMY bootcamp</li>
-    </ol>
-    <a href="Contact.html">Lets Connect!</a>
+    <hr>
+    <p class="intro center">I love coding, eating, and snowboarding!</p>
+    <p class="intro center">See my Free Code Camp progress <a href='https://www.freecodecamp.org/kolashah'>here</a>
+        </p>
+
+            <hr>
+            <h3>Current progress</h3>
+            <ul>
+                <table>
+                    <tr class="row">
+                        <div><td class="language">JavaScript</td>
+                        <td class="star">⭐️⭐️⭐️⭐️</td></div>
+                        <td class="language">CSS</td>
+                        <td class="star">⭐️⭐️</td>
+                        <td class="language">C++</td>
+                        <td class="star">⭐️</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="language">HTML</td>
+                        <td class="star">⭐️⭐️⭐️</td>
+                        <td class="language">Git</td>
+                        <td class="star">⭐️⭐️</td>
+                    </tr>
+                    <tr class="row">
+                        <td class="language">Node</td>
+                        <td class="star">⭐️⭐️⭐️</td>
+                        <td class="language">Python</td>
+                        <td class="star">⭐️⭐️</td>
+                    </tr>
+                </table>
+
+            </ul>
+            <hr>
+            <h3>To-Do List</h3>
+            <ol>
+                <li>Finish precourse</li>
+                <li>Last few CSX units</li>
+                <li>UDEMY bootcamp</li>
+            </ol>
+            <a href="Contact.html">Lets Connect!</a>
 </body>
 
 </html>
